--- a/app/views/deals_days/_day_01.html.erb
+++ b/app/views/deals_days/_day_01.html.erb
@@ -12,7 +12,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2InWpb7">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2InWpb7">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -30,7 +30,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WoB4Ix">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2WoB4Ix">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -48,7 +48,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/318lRtU">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/318lRtU">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -66,7 +66,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2JYIEDa">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2JYIEDa">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -84,7 +84,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WfTZk3">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2WfTZk3">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -102,7 +102,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WqpY5H">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2WqpY5H">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -120,7 +120,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Im3Hwg">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2Im3Hwg">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -138,7 +138,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WoBUFb">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2WoBUFb">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -156,7 +156,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WfV7UP">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2WfV7UP">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -174,7 +174,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Ipv20z">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2Ipv20z">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -236,7 +236,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2K41c59">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2K41c59">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -254,7 +254,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2IhhJiC">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2IhhJiC">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -272,7 +272,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WetdZ1">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2WetdZ1">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -290,7 +290,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2XtxY2r">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2XtxY2r">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -315,7 +315,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WeLPbt">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2WeLPbt">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -333,7 +333,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WetIlR">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2WetIlR">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -351,7 +351,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WcfXUZ">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2WcfXUZ">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -369,7 +369,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WqmUGY">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2WqmUGY">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -387,7 +387,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Mv9RiY">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2Mv9RiY">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -405,7 +405,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WfceWF">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2WfceWF">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -423,7 +423,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WhbEaS">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2WhbEaS">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -441,7 +441,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2EQkLcU">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2EQkLcU">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -459,7 +459,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WbNI8Z">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2WbNI8Z">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -477,7 +477,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Ktr6ym">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2Ktr6ym">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -495,6 +495,6 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WayEIA">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2WayEIA">Shop Now at Amazon</a>
   </div>
 </div>
