--- a/app/views/deals_days/_day_05.html.erb
+++ b/app/views/deals_days/_day_05.html.erb
@@ -12,7 +12,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://www.amazon.com/gp/product/B07JFP5G4L/ref=as_li_ss_tl?smid=ATVPDKIKX0DER&psc=1&ascsub&linkCode=sl1&tag=3628-20&linkId=90a0ee9880234398cf1bf1347cb83766&language=en_US">Shop Now</a>
+    <a target="_blank" href="https://www.amazon.com/gp/product/B07JFP5G4L/ref=as_li_ss_tl?smid=ATVPDKIKX0DER&psc=1&ascsub&linkCode=sl1&tag=3628-20&linkId=90a0ee9880234398cf1bf1347cb83766&language=en_US">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -30,7 +30,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://www.amazon.com/gp/product/B079JXY4TJ/ref=as_li_ss_tl?&ascsub&linkCode=sl1&tag=3628-20&linkId=2e7535cd1ccb36192dc415ffe49e6805&language=en_US">Shop Now</a>
+    <a target="_blank" href="https://www.amazon.com/gp/product/B079JXY4TJ/ref=as_li_ss_tl?&ascsub&linkCode=sl1&tag=3628-20&linkId=2e7535cd1ccb36192dc415ffe49e6805&language=en_US">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -48,7 +48,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://www.amazon.com/gp/product/B07NPKP57H/ref=as_li_ss_tl?ie=UTF8&smid=ATVPDKIKX0DER&ascsub&th=1&linkCode=sl1&tag=3628-20&linkId=c83a639da31afbf45e27b3502629a65d&language=en_US">Shop Now</a>
+    <a target="_blank" href="https://www.amazon.com/gp/product/B07NPKP57H/ref=as_li_ss_tl?ie=UTF8&smid=ATVPDKIKX0DER&ascsub&th=1&linkCode=sl1&tag=3628-20&linkId=c83a639da31afbf45e27b3502629a65d&language=en_US">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -66,7 +66,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://www.amazon.com/ZAGG-InvisibleShield-Defense-Screen-Protector/dp/B074STCH8K/ref=as_li_ss_tl?_encoding=UTF8&imprToken=MLv6V3Z4qhdxVijcZYb-rg&qid=1559505861&refinements=p_75:50-&s=electronics&slotNum=67&sr=1-265&linkCode=sl1&tag=3628-20&linkId=62dcc33fa7a2bc8a43413bbea0b602c9&language=en_US">Shop Now</a>
+    <a target="_blank" href="https://www.amazon.com/ZAGG-InvisibleShield-Defense-Screen-Protector/dp/B074STCH8K/ref=as_li_ss_tl?_encoding=UTF8&imprToken=MLv6V3Z4qhdxVijcZYb-rg&qid=1559505861&refinements=p_75:50-&s=electronics&slotNum=67&sr=1-265&linkCode=sl1&tag=3628-20&linkId=62dcc33fa7a2bc8a43413bbea0b602c9&language=en_US">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -84,7 +84,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://www.amazon.com/Microsoft-Surface-Laptop-Intel-256GB/dp/B075S5XCC3/ref=as_li_ss_tl?_encoding=UTF8&imprToken=MLv6V3Z4qhdxVijcZYb-rg&qid=1559505861&refinements=p_75:50-&s=electronics&slotNum=67&sr=1-275&linkCode=sl1&tag=3628-20&linkId=47d518e911433dc3115030a8385851c4&language=en_US">Shop Now</a>
+    <a target="_blank" href="https://www.amazon.com/Microsoft-Surface-Laptop-Intel-256GB/dp/B075S5XCC3/ref=as_li_ss_tl?_encoding=UTF8&imprToken=MLv6V3Z4qhdxVijcZYb-rg&qid=1559505861&refinements=p_75:50-&s=electronics&slotNum=67&sr=1-275&linkCode=sl1&tag=3628-20&linkId=47d518e911433dc3115030a8385851c4&language=en_US">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -115,7 +115,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WEpubx">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2WEpubx">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -144,7 +144,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WyXCWt">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2WyXCWt">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -162,7 +162,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WFzCB0">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2WFzCB0">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -180,7 +180,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2IgPf8A">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2IgPf8A">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -198,7 +198,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Z9Ago3">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2Z9Ago3">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -216,7 +216,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Mm8QJV">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2Mm8QJV">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -234,7 +234,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2IbNUjB">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2IbNUjB">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -252,7 +252,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2HRzmXs">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2HRzmXs">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -270,7 +270,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2JSDfxw">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2JSDfxw">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -288,7 +288,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Z5glGF">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2Z5glGF">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -306,7 +306,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2HS0ky9">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2HS0ky9">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -324,7 +324,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2IfG0W6">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2IfG0W6">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -342,7 +342,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Z08EBt">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2Z08EBt">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -360,7 +360,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Ic45NH">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2Ic45NH">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -378,7 +378,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2EMvqoK">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2EMvqoK">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -396,7 +396,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2HQYBsM">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2HQYBsM">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -414,7 +414,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Z09Apt">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2Z09Apt">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -432,7 +432,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WftbFg">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2WftbFg">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -450,7 +450,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2YXHiMc">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2YXHiMc">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -468,7 +468,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2ENWNyR">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2ENWNyR">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -486,7 +486,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2QH4wDI">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2QH4wDI">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -511,7 +511,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="product_link">Shop Now</a>
+    <a target="_blank" href="product_link">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -529,7 +529,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2W7SJzo">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2W7SJzo">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -547,7 +547,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2HOXoSO">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2HOXoSO">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -565,7 +565,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2W91xom">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2W91xom">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -583,7 +583,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Wbsp7b">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2Wbsp7b">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -601,7 +601,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2YZMXkZ">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2YZMXkZ">Shop Now at Amazon</a>
   </div>
 </div>
 
