--- a/app/views/deals_days/_day_07.html.erb
+++ b/app/views/deals_days/_day_07.html.erb
@@ -23,7 +23,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://www.amazon.com/apb/page/ref=as_li_ss_tl?handlerName=OctopusDealLandingStream&deals=defc2597&smid=ATVPDKIKX0DER&pf_rd_p=28320233-63b3-4284-8e9c-b70e247421b9&pf_rd_s=slot-5&pf_rd_t=701&pf_rd_i=gb_main&pf_rd_m=ATVPDKIKX0DER&pf_rd_r=XSMTMR67JJSBE0BDH2WH&linkCode=sl2&tag=3628-20&linkId=fedc26fb74cefa751804a7e3cfa8c94e&language=en_US">Shop Now</a>
+    <a target="_blank" href="https://www.amazon.com/apb/page/ref=as_li_ss_tl?handlerName=OctopusDealLandingStream&deals=defc2597&smid=ATVPDKIKX0DER&pf_rd_p=28320233-63b3-4284-8e9c-b70e247421b9&pf_rd_s=slot-5&pf_rd_t=701&pf_rd_i=gb_main&pf_rd_m=ATVPDKIKX0DER&pf_rd_r=XSMTMR67JJSBE0BDH2WH&linkCode=sl2&tag=3628-20&linkId=fedc26fb74cefa751804a7e3cfa8c94e&language=en_US">Shop Now at Aamzon</a>
   </div>
 </div>
 
@@ -41,7 +41,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://www.amazon.com/gp/product/B0787LX7J8/ref=as_li_ss_tl?smid=ATVPDKIKX0DER&psc=1&ascsub&linkCode=sl1&tag=3628-20&linkId=d3f166d7145ce6720af1de970d8deac8&language=en_US">Shop Now</a>
+    <a target="_blank" href="https://www.amazon.com/gp/product/B0787LX7J8/ref=as_li_ss_tl?smid=ATVPDKIKX0DER&psc=1&ascsub&linkCode=sl1&tag=3628-20&linkId=d3f166d7145ce6720af1de970d8deac8&language=en_US">Shop Now at Aamzon</a>
   </div>
 </div>
 
@@ -59,7 +59,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://www.amazon.com/Air-Wick-Chamomile-Freshener-Packaging/dp/B00YR9JWAY/ref=as_li_ss_tl?_encoding=UTF8&imprToken=T8hU4bRDN0UAOONPgCuO4Q&qid=1559669418&refinements=p_75:20-&s=home-garden&slotNum=90&sr=1-113&th=1&linkCode=sl1&tag=3628-20&linkId=b5a5bfc184a40fdeb90027666693a92f&language=en_US">Shop Now</a>
+    <a target="_blank" href="https://www.amazon.com/Air-Wick-Chamomile-Freshener-Packaging/dp/B00YR9JWAY/ref=as_li_ss_tl?_encoding=UTF8&imprToken=T8hU4bRDN0UAOONPgCuO4Q&qid=1559669418&refinements=p_75:20-&s=home-garden&slotNum=90&sr=1-113&th=1&linkCode=sl1&tag=3628-20&linkId=b5a5bfc184a40fdeb90027666693a92f&language=en_US">Shop Now at Aamzon</a>
   </div>
 </div>
 
@@ -77,7 +77,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://www.amazon.com/Presto-22-inch-Electric-Griddle-Removable/dp/B005FYF3OY/ref=as_li_ss_tl?_encoding=UTF8&imprToken=T8hU4bRDN0UAOONPgCuO4Q&qid=1559669580&refinements=p_75:20-&s=home-garden&slotNum=90&sr=1-134&linkCode=sl1&tag=3628-20&linkId=a22c6d18eb1fc180373d954abde4ad2e&language=en_US">Shop Now</a>
+    <a target="_blank" href="https://www.amazon.com/Presto-22-inch-Electric-Griddle-Removable/dp/B005FYF3OY/ref=as_li_ss_tl?_encoding=UTF8&imprToken=T8hU4bRDN0UAOONPgCuO4Q&qid=1559669580&refinements=p_75:20-&s=home-garden&slotNum=90&sr=1-134&linkCode=sl1&tag=3628-20&linkId=a22c6d18eb1fc180373d954abde4ad2e&language=en_US">Shop Now at Aamzon</a>
   </div>
 </div>
 
@@ -95,7 +95,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://www.amazon.com/iRobot-Roomba-Vacuum-Connectivity-Carpets/dp/B06XRT2B3P/ref=as_li_ss_tl?_encoding=UTF8&imprToken=T8hU4bRDN0UAOONPgCuO4Q&qid=1559669705&refinements=p_75:20-&s=home-garden&slotNum=90&sr=1-195&linkCode=sl1&tag=3628-20&linkId=e42fa5304044e8d43905a56a60d5be3f&language=en_US">Shop Now</a>
+    <a target="_blank" href="https://www.amazon.com/iRobot-Roomba-Vacuum-Connectivity-Carpets/dp/B06XRT2B3P/ref=as_li_ss_tl?_encoding=UTF8&imprToken=T8hU4bRDN0UAOONPgCuO4Q&qid=1559669705&refinements=p_75:20-&s=home-garden&slotNum=90&sr=1-195&linkCode=sl1&tag=3628-20&linkId=e42fa5304044e8d43905a56a60d5be3f&language=en_US">Shop Now at Aamzon</a>
   </div>
 </div>
 
@@ -113,7 +113,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://www.amazon.com/Cedar-ProMist-MAX-Spray-Mop/dp/B01MYNBGQJ/ref=as_li_ss_tl?_encoding=UTF8&imprToken=T8hU4bRDN0UAOONPgCuO4Q&qid=1559669705&refinements=p_75:20-&s=home-garden&slotNum=90&sr=1-211&linkCode=sl1&tag=3628-20&linkId=8c4291a8105c37cd2f6cb7ddef02ed98&language=en_US">Shop Now</a>
+    <a target="_blank" href="https://www.amazon.com/Cedar-ProMist-MAX-Spray-Mop/dp/B01MYNBGQJ/ref=as_li_ss_tl?_encoding=UTF8&imprToken=T8hU4bRDN0UAOONPgCuO4Q&qid=1559669705&refinements=p_75:20-&s=home-garden&slotNum=90&sr=1-211&linkCode=sl1&tag=3628-20&linkId=8c4291a8105c37cd2f6cb7ddef02ed98&language=en_US">Shop Now at Aamzon</a>
   </div>
 </div>
 
@@ -131,7 +131,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://www.amazon.com/Thermos-Funtainer-Ounce-Bottle-Pink/dp/B00DAPQT3O/ref=as_li_ss_tl?_encoding=UTF8&imprToken=T8hU4bRDN0UAOONPgCuO4Q&qid=1559669820&refinements=p_75:20-&s=home-garden&slotNum=90&sr=1-238&linkCode=sl1&tag=3628-20&linkId=186bb67ce2242ea0b984772f02a1b674&language=en_US">Shop Now</a>
+    <a target="_blank" href="https://www.amazon.com/Thermos-Funtainer-Ounce-Bottle-Pink/dp/B00DAPQT3O/ref=as_li_ss_tl?_encoding=UTF8&imprToken=T8hU4bRDN0UAOONPgCuO4Q&qid=1559669820&refinements=p_75:20-&s=home-garden&slotNum=90&sr=1-238&linkCode=sl1&tag=3628-20&linkId=186bb67ce2242ea0b984772f02a1b674&language=en_US">Shop Now at Aamzon</a>
   </div>
 </div>
 
@@ -149,7 +149,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://www.amazon.com/DECKER-LD120VA-20-Volt-Lithium-Accessories/dp/B006V6YAPI/ref=as_li_ss_tl?_encoding=UTF8&imprToken=T8hU4bRDN0UAOONPgCuO4Q&qid=1559669885&refinements=p_75:20-&s=home-garden&slotNum=90&sr=1-251&linkCode=sl1&tag=3628-20&linkId=49d157f443ae9394f44f2a7d369e9cb5&language=en_US">Shop Now</a>
+    <a target="_blank" href="https://www.amazon.com/DECKER-LD120VA-20-Volt-Lithium-Accessories/dp/B006V6YAPI/ref=as_li_ss_tl?_encoding=UTF8&imprToken=T8hU4bRDN0UAOONPgCuO4Q&qid=1559669885&refinements=p_75:20-&s=home-garden&slotNum=90&sr=1-251&linkCode=sl1&tag=3628-20&linkId=49d157f443ae9394f44f2a7d369e9cb5&language=en_US">Shop Now at Aamzon</a>
   </div>
 </div>
 
@@ -167,7 +167,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://www.amazon.com/Elite-Cuisine-EGC-007-Hard-Boiled-Auto-Shut/dp/B00F0RDRFS/ref=as_li_ss_tl?_encoding=UTF8&imprToken=T8hU4bRDN0UAOONPgCuO4Q&qid=1559670005&refinements=p_75:20-&s=appliances&slotNum=2&sr=1-92&linkCode=sl1&tag=3628-20&linkId=b6e15cd3f16a744ede6fafd9268e7bf9&language=en_US">Shop Now</a>
+    <a target="_blank" href="https://www.amazon.com/Elite-Cuisine-EGC-007-Hard-Boiled-Auto-Shut/dp/B00F0RDRFS/ref=as_li_ss_tl?_encoding=UTF8&imprToken=T8hU4bRDN0UAOONPgCuO4Q&qid=1559670005&refinements=p_75:20-&s=appliances&slotNum=2&sr=1-92&linkCode=sl1&tag=3628-20&linkId=b6e15cd3f16a744ede6fafd9268e7bf9&language=en_US">Shop Now at Aamzon</a>
   </div>
 </div>
 
@@ -185,7 +185,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://www.amazon.com/Black-Decker-Portable-Conditioner-Display/dp/B01DLPUWG2/ref=as_li_ss_tl?_encoding=UTF8&imprToken=T8hU4bRDN0UAOONPgCuO4Q&qid=1559670005&refinements=p_75:20-&s=appliances&slotNum=2&sr=1-95&linkCode=sl1&tag=3628-20&linkId=2b938916fca945e1a33da6844fdf6944&language=en_US">Shop Now</a>
+    <a target="_blank" href="https://www.amazon.com/Black-Decker-Portable-Conditioner-Display/dp/B01DLPUWG2/ref=as_li_ss_tl?_encoding=UTF8&imprToken=T8hU4bRDN0UAOONPgCuO4Q&qid=1559670005&refinements=p_75:20-&s=appliances&slotNum=2&sr=1-95&linkCode=sl1&tag=3628-20&linkId=2b938916fca945e1a33da6844fdf6944&language=en_US">Shop Now at Aamzon</a>
   </div>
 </div>
 
@@ -203,7 +203,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://www.amazon.com/Winix-5500-2-Purifier-PlasmaWave-Reducing/dp/B01D8DAYII/ref=as_li_ss_tl?_encoding=UTF8&imprToken=T8hU4bRDN0UAOONPgCuO4Q&qid=1559670121&refinements=p_75:20-&s=appliances&slotNum=2&sr=1-97&linkCode=sl1&tag=3628-20&linkId=763269b14da18ca223a57f9803b6a82a&language=en_US">Shop Now</a>
+    <a target="_blank" href="https://www.amazon.com/Winix-5500-2-Purifier-PlasmaWave-Reducing/dp/B01D8DAYII/ref=as_li_ss_tl?_encoding=UTF8&imprToken=T8hU4bRDN0UAOONPgCuO4Q&qid=1559670121&refinements=p_75:20-&s=appliances&slotNum=2&sr=1-97&linkCode=sl1&tag=3628-20&linkId=763269b14da18ca223a57f9803b6a82a&language=en_US">Shop Now at Aamzon</a>
   </div>
 </div>
 
@@ -235,7 +235,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Wc0pAH">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2Wc0pAH">Shop Now at Aamzon</a>
   </div>
 </div>
 
@@ -265,7 +265,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2MCnnRE">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2MCnnRE">Shop Now at Aamzon</a>
   </div>
 </div>
 
@@ -301,7 +301,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="product_link">Shop Now</a>
+    <a target="_blank" href="product_link">Shop Now at Aamzon</a>
   </div>
 </div>
 
@@ -319,7 +319,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2IilpRd">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2IilpRd">Shop Now at Aamzon</a>
   </div>
 </div>
 
@@ -337,7 +337,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Im5UHN">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2Im5UHN">Shop Now at Aamzon</a>
   </div>
 </div>
 
@@ -355,7 +355,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Mr5gyf">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2Mr5gyf">Shop Now at Aamzon</a>
   </div>
 </div>
 
@@ -380,7 +380,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2JUL19Z">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2JUL19Z">Shop Now at Aamzon</a>
   </div>
 </div>
 
@@ -398,7 +398,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/313tlhH">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/313tlhH">Shop Now at Aamzon</a>
   </div>
 </div>
 
@@ -416,7 +416,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WI5AfH">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2WI5AfH">Shop Now at Aamzon</a>
   </div>
 </div>
 
@@ -434,7 +434,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2JW2nDj">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2JW2nDj">Shop Now at Aamzon</a>
   </div>
 </div>
 
@@ -452,7 +452,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2XsBUR2">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2XsBUR2">Shop Now at Aamzon</a>
   </div>
 </div>
 
@@ -470,7 +470,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2ER4Evn">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2ER4Evn">Shop Now at Aamzon</a>
   </div>
 </div>
 
@@ -488,7 +488,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2MH18uf">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2MH18uf">Shop Now at Aamzon</a>
   </div>
 </div>
 
@@ -506,7 +506,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2K1KJOT">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2K1KJOT">Shop Now at Aamzon</a>
   </div>
 </div>
 
@@ -524,7 +524,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2EQHB4a">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2EQHB4a">Shop Now at Aamzon</a>
   </div>
 </div>
 
@@ -542,7 +542,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2EPKgLc">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2EPKgLc">Shop Now at Aamzon</a>
   </div>
 </div>
 
@@ -560,7 +560,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2ETpjix">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2ETpjix">Shop Now at Aamzon</a>
   </div>
 </div>
 
@@ -578,7 +578,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/3149AXz">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/3149AXz">Shop Now at Aamzon</a>
   </div>
 </div>
 
@@ -596,7 +596,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2JUKyEX">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2JUKyEX">Shop Now at Aamzon</a>
   </div>
 </div>
 
@@ -614,7 +614,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2We8IvN">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2We8IvN">Shop Now at Aamzon</a>
   </div>
 </div>
 
@@ -632,7 +632,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2XobYGg">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2XobYGg">Shop Now at Aamzon</a>
   </div>
 </div>
 
@@ -650,7 +650,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WfaQTO">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2WfaQTO">Shop Now at Aamzon</a>
   </div>
 </div>
 
@@ -668,7 +668,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WLmABV">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2WLmABV">Shop Now at Aamzon</a>
   </div>
 </div>
 
