--- a/app/views/deals_days/_day_02.html.erb
+++ b/app/views/deals_days/_day_02.html.erb
@@ -12,7 +12,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2XtioUs">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2XtioUs">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -30,7 +30,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2EVpQk6">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2EVpQk6">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -48,7 +48,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2IrZdnR">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2IrZdnR">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -66,7 +66,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Wtx5dS">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2Wtx5dS">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -84,7 +84,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Xt8qTf">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2Xt8qTf">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -102,7 +102,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WOR5qt">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2WOR5qt">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -120,7 +120,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2My23go">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2My23go">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -138,7 +138,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="product_link">Shop Now</a>
+    <a target="_blank" href="product_link">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -156,7 +156,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2MHolfQ">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2MHolfQ">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -174,7 +174,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2MyAMdD">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2MyAMdD">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -192,7 +192,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2JXyuCE">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2JXyuCE">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -210,7 +210,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2K3gCpY">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2K3gCpY">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -228,7 +228,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2K21V6x">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2K21V6x">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -246,7 +246,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2ImoorY">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2ImoorY">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -264,7 +264,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Wfsx5H">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2Wfsx5H">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -282,7 +282,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2K1fxyV">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2K1fxyV">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -300,7 +300,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2EW6qM5">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2EW6qM5">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -318,7 +318,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2KvVatc">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2KvVatc">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -336,7 +336,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2K1gDL3">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2K1gDL3">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -354,7 +354,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2EUXOoO">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2EUXOoO">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -372,7 +372,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2EPkJ4X">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2EPkJ4X">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -402,7 +402,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2IqqtTy">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2IqqtTy">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -420,7 +420,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2ERFmxi">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2ERFmxi">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -438,7 +438,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WOaGqS">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2WOaGqS">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -456,7 +456,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2ETrQcA">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2ETrQcA">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -487,7 +487,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WMlfLb">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2WMlfLb">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -505,7 +505,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Wle48h">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2Wle48h">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -523,7 +523,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2KwBtl5">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2KwBtl5">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -541,7 +541,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2MsYRlX">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2MsYRlX">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -559,7 +559,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WlOReh">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2WlOReh">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -588,7 +588,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="product_link">Shop Now</a>
+    <a target="_blank" href="product_link">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -606,7 +606,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2EVyYFe">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2EVyYFe">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -624,7 +624,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2KxrP1p">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2KxrP1p">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -642,7 +642,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2EY5o26">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2EY5o26">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -660,7 +660,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Mznrle">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2Mznrle">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -678,7 +678,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2EUGOiD">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2EUGOiD">Shop Now at Amazon</a>
   </div>
 </div>
 
