--- a/app/views/deals_days/_day_04.html.erb
+++ b/app/views/deals_days/_day_04.html.erb
@@ -12,7 +12,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2YZbJlh">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2YZbJlh">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -30,7 +30,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WAxUAN">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2WAxUAN">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -48,7 +48,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WFkjYX">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2WFkjYX">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -66,7 +66,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2EMS00H">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2EMS00H">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -84,7 +84,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2QF4eNn">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2QF4eNn">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -102,7 +102,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2ELAQQY">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2ELAQQY">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -120,7 +120,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Z12XDi">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2Z12XDi">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -138,7 +138,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Z2jBSW">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2Z2jBSW">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -156,7 +156,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2QGnD0r">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2QGnD0r">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -174,7 +174,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2YXJEuL">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2YXJEuL">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -192,7 +192,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2QEaJjE">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2QEaJjE">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -210,7 +210,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2IaSizg">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2IaSizg">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -228,7 +228,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2YZaQcv">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2YZaQcv">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -246,7 +246,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2IdDO1t">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2IdDO1t">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -264,7 +264,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Ml5sir">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2Ml5sir">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -295,7 +295,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2QCbnhD">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2QCbnhD">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -327,7 +327,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2EH1FFZ">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2EH1FFZ">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -345,7 +345,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2YYGE19">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2YYGE19">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -363,7 +363,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2QBqIyV">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2QBqIyV">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -381,7 +381,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2HOBnmU">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2HOBnmU">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -399,7 +399,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2QFQfam">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2QFQfam">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -417,7 +417,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Mkl45P">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2Mkl45P">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -435,7 +435,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2HQ33Iq">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2HQ33Iq">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -453,7 +453,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2HQAXNb">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2HQAXNb">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -478,7 +478,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2QBCt8F">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2QBCt8F">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -496,7 +496,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WBHHqa">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2WBHHqa">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -514,7 +514,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WB8S4l">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2WB8S4l">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -532,7 +532,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2MmbKhE">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2MmbKhE">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -550,7 +550,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2MmOpfK">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2MmOpfK">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -568,7 +568,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Mivlzk">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2Mivlzk">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -586,7 +586,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2QzwhOc">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2QzwhOc">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -604,7 +604,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2JSJAce">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2JSJAce">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -622,7 +622,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2QBuJ6t">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2QBuJ6t">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -640,7 +640,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2EL98nk">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2EL98nk">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -658,7 +658,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2ENzYeD">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2ENzYeD">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -676,7 +676,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2IczgIL">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2IczgIL">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -694,6 +694,6 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2HOUVaZ">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2HOUVaZ">Shop Now at Amazon</a>
   </div>
 </div>
