--- a/app/views/deals_days/_day_06.html.erb
+++ b/app/views/deals_days/_day_06.html.erb
@@ -12,7 +12,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Wlfi8K">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2Wlfi8K">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -30,7 +30,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2KoWVbu">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2KoWVbu">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -48,7 +48,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WnSepF">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2WnSepF">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -66,7 +66,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WnSGEn">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2WnSGEn">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -84,7 +84,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WmtYnK">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2WmtYnK">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -102,7 +102,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/3152Ng9">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/3152Ng9">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -120,7 +120,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WJGVYj">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2WJGVYj">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -145,7 +145,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2KppLbV">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2KppLbV">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -163,7 +163,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2JTv8AP">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2JTv8AP">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -181,7 +181,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Z0bRRq">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2Z0bRRq">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -199,7 +199,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WDW39D">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2WDW39D">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -217,7 +217,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Mqdkiw">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2Mqdkiw">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -235,7 +235,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2MAFgka">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2MAFgka">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -253,7 +253,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2HSAzh1">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2HSAzh1">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -271,7 +271,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WASOzT">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2WASOzT">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -289,7 +289,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Z0qcxm">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2Z0qcxm">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -307,7 +307,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2ELTyYE">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2ELTyYE">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -325,7 +325,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2EQ5711">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2EQ5711">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -343,7 +343,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Z1Ctl9">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2Z1Ctl9">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -361,7 +361,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2JTtbEt">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2JTtbEt">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -379,7 +379,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2JTtf7b">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2JTtf7b">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -397,7 +397,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2IdwbZ4">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2IdwbZ4">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -415,7 +415,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WIr9gh">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2WIr9gh">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -433,7 +433,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Z9aXT3">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2Z9aXT3">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -451,7 +451,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2IfkYqK">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2IfkYqK">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -469,7 +469,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2JUF0Kk">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2JUF0Kk">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -487,7 +487,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="product_link">Shop Now</a>
+    <a target="_blank" href="product_link">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -505,7 +505,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2MF7uu7">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2MF7uu7">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -523,7 +523,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2JUFUXg">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2JUFUXg">Shop Now at Amazon</a>
   </div>
 </div>
 
@@ -541,7 +541,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2IdD901">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2IdD901">Shop Now at Amazon</a>
   </div>
 </div>
 
