--- a/app/views/gadgets/show.html.erb
+++ b/app/views/gadgets/show.html.erb
@@ -41,8 +41,8 @@
             </div>
           <% end %>
         <% end %>
-      </div> -->
-      
+      </div> 
+       -->
     </div>
   </div>
 </div>
